feat: add locations service
