# doc/swagger/talebound.swagger.json
@@ -20,6 +20,9 @@
       "name": "Images"
     },
     {
+      "name": "Locations"
+    },
+    {
       "name": "Maps"
     },
     {
@@ -308,6 +311,47 @@
         ],
         "tags": [
           "Images"
+        ]
+      }
+    },
+    "/locations/{locationId}": {
+      "patch": {
+        "summary": "Update location",
+        "description": "updates location properties",
+        "operationId": "Locations_UpdateLocation",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/pbUpdateLocationResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "locationId",
+            "in": "path",
+            "required": true,
+            "type": "integer",
+            "format": "int32"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "object"
+            }
+          }
+        ],
+        "tags": [
+          "Locations"
         ]
       }
     },
@@ -3759,6 +3803,14 @@
         }
       }
     },
+    "pbUpdateLocationResponse": {
+      "type": "object",
+      "properties": {
+        "location": {
+          "$ref": "#/definitions/pbViewLocation"
+        }
+      }
+    },
     "pbUpdateMapResponse": {
       "type": "object",
       "properties": {
@@ -3895,6 +3947,29 @@
       "properties": {
         "isVerified": {
           "type": "boolean"
+        }
+      }
+    },
+    "pbViewLocation": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "name": {
+          "type": "string"
+        },
+        "description": {
+          "type": "string"
+        },
+        "postId": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "thumbnailImageId": {
+          "type": "integer",
+          "format": "int32"
         }
       }
     },
